--- a/custom_components/stream_assist/services.yaml
+++ b/custom_components/stream_assist/services.yaml
@@ -32,13 +32,27 @@ run:
     browser_id:
       name: Browser ID
       description: Browser for playing gif picture
+      selector:
         text:
-          
+
+    tts_service:
+      name: TTS_service
+      description: Tss service for playing wake word detection resposnses
+      selector:
+        text:
+
+    tts_language:
+      name: TTS_language
+      description: Tss language for playing wake word detection resposnses
+      selector:
+        text:
+
     stt_start_media:
       name: Wake Word detect media
       description: media-source://tts/edge_tts?message=how can i assist you&language=en-US-MichelleNeural
       selector:
         text:
+
     speech_gif:
       name: GIF for speak
       description: Link to the gif for simulate speaking
