--- a/custom_components/stream_assist/manifest.json
+++ b/custom_components/stream_assist/manifest.json
@@ -2,16 +2,16 @@
   "domain": "stream_assist",
   "name": "Stream Assist",
   "codeowners": [
-    "@AlexxIT"
+    "@relust"
   ],
   "config_flow": true,
   "dependencies": [
     "stream",
     "assist_pipeline"
   ],
-  "documentation": "https://github.com/AlexxIT/StreamAssist",
+  "documentation": "https://github.com/relust/VisualStreamAssist",
   "iot_class": "calculated",
-  "issue_tracker": "https://github.com/AlexxIT/StreamAssist/issues",
+  "issue_tracker": "https://github.com/relust/VisualStreamAssist/issues",
   "requirements": [],
   "version": "v2.0.0"
 }
